--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+html {
+    /* font-size: 50.5%; */
+}
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
         "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
