--- a/src/components/heading/heading.styles.scss
+++ b/src/components/heading/heading.styles.scss
@@ -16,4 +16,31 @@
     & .sub {
         font-size: 1.5rem;
     }
+
+    @media screen and (max-width: 800px) {
+        margin-top: 1rem;
+        height: 5rem;
+
+        &-typed {
+            font-size: 2.6rem;
+        }
+
+        & .sub {
+            font-size: 0.8rem;
+        }
+    }
+
+    @media screen and (max-width: 500px) and (min-width: 375px) {
+        margin-top: 1rem;
+
+        height: 5rem;
+
+        &-typed {
+            font-size: 1.4rem;
+        }
+
+        & .sub {
+            font-size: 0.6rem;
+        }
+    }
 }
