--- a/src/pages/about/about.styles.scss
+++ b/src/pages/about/about.styles.scss
@@ -8,17 +8,6 @@
 .description {
     flex: 50%;
     display: flex;
-
-    // width: 25rem;
-    // height: 31rem;
-    // display: flex;
-    // flex-direction: center;
-    // margin: 0 2rem;
-
-    // img {
-    //     max-width: 100%;
-    //     max-height: 100%;
-    // }
 }
 
 .description {
@@ -36,11 +25,29 @@
         background-color: #ffffff;
         color: black;
     }
+
+    @media screen and (max-width: 1200px) and (min-width: 415px) {
+        padding-right: 0;
+        padding-top: 1rem;
+        font-size: 0.7rem;
+    }
+
+    @media screen and (max-width: 375px) {
+        padding-right: 0;
+        padding-top: 1rem;
+        font-size: 0.4rem;
+    }
+
+    @media screen and (max-width: 414px) and (min-width: 376px) {
+        padding-right: 0;
+        padding-top: 1rem;
+        font-size: 0.5rem;
+    }
 }
 
 .image-container {
     padding-left: 25rem;
-    width: 30rem;
+    // width: 30rem;
     height: 36rem;
     display: flex;
     flex-direction: column;
@@ -49,5 +56,29 @@
     img {
         max-width: 100%;
         max-height: 100%;
+    }
+
+    @media screen and (max-width: 1200px) and (min-width: 415px) {
+        padding-left: 0;
+        img {
+            max-width: 70%;
+            max-height: 70%;
+        }
+    }
+
+    @media screen and (max-width: 375px) {
+        padding-left: 0;
+        img {
+            max-width: 70%;
+            max-height: 70%;
+        }
+    }
+
+    @media screen and (max-width: 414px) and (min-width: 376px) {
+        padding-left: 0;
+        img {
+            max-width: 70%;
+            max-height: 70%;
+        }
     }
 }
