--- a/src/pages/tools/tools.styles.scss
+++ b/src/pages/tools/tools.styles.scss
@@ -19,3 +19,49 @@
         color: antiquewhite;
     }
 }
+
+@media screen and (max-width: 1028px) and (min-width: 676px) {
+    .tools {
+        margin: 2rem 1rem;
+    }
+
+    .tool {
+        width: 7rem;
+        height: 7rem;
+        margin: 0 0;
+
+        img {
+            width: 50%;
+            height: 50%;
+        }
+        span {
+            margin-left: 0.5rem;
+            font-size: 0.6rem;
+        }
+    }
+}
+
+@media screen and (max-width: 675px) and (min-width: 375px) {
+    .tools {
+        margin: 2rem 1rem;
+    }
+
+    .tool {
+        width: 5rem;
+        height: 5rem;
+        margin: 0 0;
+
+        img {
+            width: 50%;
+            height: 50%;
+        }
+        span {
+            margin-left: 0.5rem;
+            font-size: 0.6rem;
+        }
+    }
+}
+// @media (min-width: 768px) { ... }
+// @media (min-width: 1024px) { ... }
+// @media (min-width: 1280px) { ... }
+// @media (min-width: 1536px) { ... }
