Added box shadow for card component

--- a/src/components/card/card-item.styles.scss
+++ b/src/components/card/card-item.styles.scss
@@ -4,6 +4,7 @@
     width: 15rem;
     height: 17rem;
     position: relative;
+
     // overflow: hidden;
     &:hover > .front {
         transform: perspective(600px) rotateY(-180deg);
@@ -21,6 +22,8 @@
     backface-visibility: hidden;
     position: absolute;
     transition: transform 0.6s linear;
+    border-radius: 3px;
+    box-shadow: 0 1.5rem 4rem rgba(#000, 0.15);
 }
 .front {
     transform: perspective(600px) rotateY(0deg);
