--- a/src/pages/about/about.styles.scss
+++ b/src/pages/about/about.styles.scss
@@ -1,84 +1,79 @@
 .about {
+  margin: 5rem 10rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  img {
+    height: 36rem;
+  }
+
+  @media screen and (max-width: 1200px) {
+    img {
+      height: 26rem;
+    }
+  }
+
+  @media screen and (max-width: 900px) {
+    grid-template-columns: 1fr 1fr;
+    margin: 5rem;
+    img {
+      height: 24rem;
+    }
+  }
+  @media screen and (max-width: 700px) {
+    grid-template-columns: 1fr;
     margin-top: 2rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-.image-container,
-.description {
-    flex: 50%;
-    display: flex;
+    img {
+      height: 24rem;
+    }
+  }
 }
 
 .description {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding-right: 20rem;
-    padding-top: 2rem;
+  margin-top: 2rem;
+  align-items: center;
+  text-align: center;
 
-    font-size: 1.2rem;
-    font-weight: 100;
+  font-size: 1.2rem;
+  font-weight: 100;
 
-    .about-me_dev {
-        background-color: #ffffff;
-        color: black;
-    }
+  .about-me_dev {
+    background-color: #ffffff;
+    color: black;
+  }
 
-    @media screen and (max-width: 1200px) and (min-width: 415px) {
-        padding-right: 0;
-        padding-top: 1rem;
-        font-size: 0.7rem;
-    }
+  @media screen and (max-width: 1400px) {
+    margin: 2rem;
+  }
 
-    @media screen and (max-width: 375px) {
-        padding-right: 0;
-        padding-top: 1rem;
-        font-size: 0.4rem;
-    }
+  @media screen and (max-width: 1200px) {
+    font-size: 1rem;
+  }
 
-    @media screen and (max-width: 414px) and (min-width: 376px) {
-        padding-right: 0;
-        padding-top: 1rem;
-        font-size: 0.5rem;
-    }
+  @media screen and (max-width: 900px) {
+    font-size: 0.9rem;
+  }
+
+  @media screen and (max-width: 414px) and (min-width: 376px) {
+  }
 }
 
 .image-container {
-    padding-left: 25rem;
-    // width: 30rem;
-    height: 36rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  justify-content: center;
+  display: flex;
 
-    img {
-        max-width: 100%;
-        max-height: 100%;
-    }
+  img {
+    max-width: 100%;
+    max-height: 100%;
+  }
 
-    @media screen and (max-width: 1200px) and (min-width: 415px) {
-        padding-left: 0;
-        img {
-            max-width: 70%;
-            max-height: 70%;
-        }
-    }
+  @media screen and (max-width: 1200px) and (min-width: 415px) {
+  }
 
-    @media screen and (max-width: 375px) {
-        padding-left: 0;
-        img {
-            max-width: 70%;
-            max-height: 70%;
-        }
-    }
+  @media screen and (max-width: 375px) {
+  }
 
-    @media screen and (max-width: 414px) and (min-width: 376px) {
-        padding-left: 0;
-        img {
-            max-width: 70%;
-            max-height: 70%;
-        }
-    }
+  @media screen and (max-width: 900px) {
+    text-align: justify;
+  }
 }
