--- a/src/pages/tools/tools.styles.scss
+++ b/src/pages/tools/tools.styles.scss
@@ -1,65 +1,65 @@
 .tools {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 2rem;
-    justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  margin: 0 2rem;
+  justify-content: center;
 }
 
 .tool {
-    width: 100px;
-    height: 100px;
-    margin: 3rem 3rem;
+  width: 100px;
+  height: 100px;
+  margin: 3rem 3rem;
 
-    img {
-        width: 100%;
-        height: 100%;
-    }
-    span {
-        margin-left: 2rem;
-        color: antiquewhite;
-    }
+  img {
+    width: 100%;
+    height: 100%;
+  }
+  span {
+    margin-left: 2rem;
+    color: antiquewhite;
+  }
 }
 
 @media screen and (max-width: 1028px) and (min-width: 676px) {
-    .tools {
-        margin: 2rem 1rem;
-    }
+  .tools {
+    margin: 2rem 1rem;
+  }
 
-    .tool {
-        width: 7rem;
-        height: 7rem;
-        margin: 0 0;
+  .tool {
+    width: 7rem;
+    height: 7rem;
+    margin: 0 0;
 
-        img {
-            width: 50%;
-            height: 50%;
-        }
-        span {
-            margin-left: 0.5rem;
-            font-size: 0.6rem;
-        }
+    img {
+      width: 50%;
+      height: 50%;
     }
+    span {
+      margin-left: 0.5rem;
+      font-size: 0.6rem;
+    }
+  }
 }
 
 @media screen and (max-width: 675px) and (min-width: 375px) {
-    .tools {
-        margin: 2rem 1rem;
-    }
+  .tools {
+    margin: 2rem 1rem;
+  }
 
-    .tool {
-        width: 5rem;
-        height: 5rem;
-        margin: 0 0;
+  .tool {
+    width: 5rem;
+    height: 5rem;
+    margin: 0 0;
 
-        img {
-            width: 50%;
-            height: 50%;
-        }
-        span {
-            margin-left: 0.5rem;
-            font-size: 0.6rem;
-        }
+    img {
+      width: 50%;
+      height: 50%;
     }
+    span {
+      margin-left: 0.5rem;
+      font-size: 0.6rem;
+    }
+  }
 }
 // @media (min-width: 768px) { ... }
 // @media (min-width: 1024px) { ... }
