--- a/src/pages/certificate/certificate.styles.scss
+++ b/src/pages/certificate/certificate.styles.scss
@@ -1,60 +1,61 @@
 .certificates {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 0 5rem;
 }
 
 .certificate {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    height: 420px;
-    margin: 2rem 2rem;
-    img {
-        width: 100%;
-        height: 100%;
-    }
-    span {
-        color: antiquewhite;
-    }
+  display: flex;
+  flex-direction: column;
+  margin: 2rem 2rem;
+  font-size: 0.8rem;
+  img {
+    width: 100%;
+    height: 100%;
+  }
+  span {
+    color: antiquewhite;
+  }
 
-    p {
-        cursor: pointer;
-        color: #74611a;
-    }
+  p {
+    cursor: pointer;
+    color: #74611a;
+  }
 }
 
 @media screen and (max-width: 1028px) and (min-width: 676px) {
-    .certificate {
-        width: 150px;
-        height: 150px;
-        margin: 2rem 2rem;
-        img {
-            width: 80%;
-            height: 80%;
-        }
-        span,
-        p {
-            padding-top: 2px;
-            font-size: 7px;
-        }
+  .certificate {
+    width: 150px;
+    height: 150px;
+    margin: 2rem 2rem;
+    img {
+      width: 80%;
+      height: 80%;
     }
+    span,
+    p {
+      padding-top: 2px;
+      font-size: 7px;
+    }
+  }
 }
 
 @media screen and (max-width: 675px) and (min-width: 375px) {
-    .certificate {
-        width: 150px;
-        height: 150px;
-        margin: 2rem 2rem;
-        img {
-            width: 80%;
-            height: 80%;
-        }
-        span,
-        p {
-            padding-top: 2px;
-            font-size: 7px;
-        }
+  .certificate {
+    width: 150px;
+    height: 150px;
+    margin: 2rem 2rem;
+    img {
+      width: 80%;
+      height: 80%;
     }
+    span,
+    p {
+      padding-top: 2px;
+      font-size: 7px;
+    }
+  }
 }
