--- a/src/pages/tools/tools.styles.scss
+++ b/src/pages/tools/tools.styles.scss
@@ -1,66 +1,38 @@
 .tools {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  margin: 0 2rem;
+  row-gap: 3rem;
   justify-content: center;
+  align-items: center;
+  margin: 0 5rem;
+  @media screen and (max-width: 1200px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  @media screen and (max-width: 800px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 .tool {
-  width: 100px;
-  height: 100px;
-  margin: 3rem 3rem;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
 
-  img {
-    width: 100%;
-    height: 100%;
-  }
-  span {
-    margin-left: 2rem;
-    color: antiquewhite;
-  }
-}
+  &-svg__svg {
+    width: 100px;
 
-@media screen and (max-width: 1028px) and (min-width: 676px) {
-  .tools {
-    margin: 2rem 1rem;
-  }
-
-  .tool {
-    width: 7rem;
-    height: 7rem;
-    margin: 0 0;
-
-    img {
-      width: 50%;
-      height: 50%;
+    @media screen and (max-width: 1200px) {
+      width: 70px;
     }
-    span {
-      margin-left: 0.5rem;
-      font-size: 0.6rem;
+    @media screen and (max-width: 800px) {
+      width: 50px;
     }
   }
 }
 
-@media screen and (max-width: 675px) and (min-width: 375px) {
-  .tools {
-    margin: 2rem 1rem;
-  }
-
-  .tool {
-    width: 5rem;
-    height: 5rem;
-    margin: 0 0;
-
-    img {
-      width: 50%;
-      height: 50%;
-    }
-    span {
-      margin-left: 0.5rem;
-      font-size: 0.6rem;
-    }
-  }
-}
 // @media (min-width: 768px) { ... }
 // @media (min-width: 1024px) { ... }
 // @media (min-width: 1280px) { ... }
