--- a/src/pages/certificate/certificate.styles.scss
+++ b/src/pages/certificate/certificate.styles.scss
@@ -5,17 +5,83 @@
   align-items: center;
   flex-wrap: wrap;
   margin: 0 5rem;
+
+  @media screen and (max-width: 1200px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media screen and (max-width: 800px) {
+    grid-template-columns: 1fr;
+  }
+}
+
+.img-modal {
+  height: 40rem;
+}
+
+.button--modal__close {
+  position: absolute;
+  top: -5%;
+  left: 95%;
+  font-size: 3rem;
+  cursor: pointer;
+
+  &:hover::before {
+    content: 'close';
+    font-size: 1rem;
+    position: absolute;
+    top: -1%;
+  }
+}
+
+.hide {
+  display: none;
 }
 
 .certificate {
   display: flex;
   flex-direction: column;
   margin: 2rem 2rem;
-  font-size: 0.8rem;
+
+  &-overlay {
+    background-color: rgba(0, 0, 0, 0.486);
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+  }
+
+  &-zoom {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 2rem;
+    cursor: pointer;
+  }
+
+  &-img__box {
+    position: relative;
+    flex: 1;
+
+    &:hover {
+      > .certificate-zoom {
+        display: block;
+      }
+
+      > .certificate-overlay {
+        display: block;
+      }
+    }
+  }
+
   img {
     width: 100%;
     height: 100%;
+    overflow: hidden;
   }
+
   span {
     color: antiquewhite;
   }
@@ -23,39 +89,5 @@
   p {
     cursor: pointer;
     color: #74611a;
-  }
-}
-
-@media screen and (max-width: 1028px) and (min-width: 676px) {
-  .certificate {
-    width: 150px;
-    height: 150px;
-    margin: 2rem 2rem;
-    img {
-      width: 80%;
-      height: 80%;
-    }
-    span,
-    p {
-      padding-top: 2px;
-      font-size: 7px;
-    }
-  }
-}
-
-@media screen and (max-width: 675px) and (min-width: 375px) {
-  .certificate {
-    width: 150px;
-    height: 150px;
-    margin: 2rem 2rem;
-    img {
-      width: 80%;
-      height: 80%;
-    }
-    span,
-    p {
-      padding-top: 2px;
-      font-size: 7px;
-    }
   }
 }
