--- a/src/components/navigation/navigation.styles.scss
+++ b/src/components/navigation/navigation.styles.scss
@@ -4,6 +4,14 @@
   font-size: 1.2rem;
   margin-bottom: 2rem;
 
+  a:visited,
+  a:hover,
+  a:active,
+  a:link {
+    text-decoration: none;
+    color: #ffeec0;
+  }
+
   .section {
     padding: 10px 15px;
     cursor: pointer;
