--- a/src/components/header/heading/heading.styles.scss
+++ b/src/components/header/heading/heading.styles.scss
@@ -1,31 +1,30 @@
 .heading {
   display: flex;
   flex-direction: column;
-  height: 10rem;
+  height: 11.5rem; // typed + sub
+  color: #fff;
+  text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
+  letter-spacing: 7px;
+  text-align: center;
+  font-weight: 100;
 
-  &-typed {
-    font-size: 3.8rem;
-    color: #fff;
-    text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
-    font-weight: 100;
-    letter-spacing: 7px;
-    display: flex;
-    justify-content: center;
+  &-primary {
+    font-size: 6.2rem;
   }
 
-  & .sub {
-    font-size: 1.5rem;
+  &-sub {
+    font-size: 2.4rem;
   }
 
   @media screen and (max-width: 800px) {
     margin-top: 1rem;
     height: 5rem;
 
-    &-typed {
+    &-primary {
       font-size: 2.6rem;
     }
 
-    & .sub {
+    &-sub {
       font-size: 0.8rem;
     }
   }
@@ -35,11 +34,11 @@
 
     height: 5rem;
 
-    &-typed {
+    &-primary {
       font-size: 1.4rem;
     }
 
-    & .sub {
+    &-sub {
       font-size: 0.6rem;
     }
   }
