--- a/src/sass/utilities.scss
+++ b/src/sass/utilities.scss
@@ -3,3 +3,19 @@
   padding: 0 3.2rem;
   margin: 0 auto;
 }
+
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+
+.margin-bottom-sm {
+  margin-bottom: 3.2rem !important;
+}
+
+.margin-top-md {
+  margin-top: 4.8rem !important;
+}
+
+.margin-top-sm {
+  margin-top: 3.2rem !important;
+}
