--- a/src/components/card/card-item.styles.scss
+++ b/src/components/card/card-item.styles.scss
@@ -1,10 +1,10 @@
 .portfolio-card {
-  //   cursor: pointer;
+  display: flex;
   justify-content: center;
-  width: 15rem;
-  height: 17rem;
+  position: relative;
+  font-weight: 200;
 
-  // overflow: hidden;
+  // Hover Effects
   &:hover > &-front {
     transform: perspective(600px) rotateY(-180deg);
   }
@@ -12,75 +12,79 @@
     transform: perspective(600px) rotateY(0deg);
   }
 
-  &-front {
-    transform: perspective(600px) rotateY(0deg);
-
-    img {
-      margin-left: auto;
-      margin-right: auto;
-    }
-  }
-
-  &-back {
-    width: 272px;
-    height: 272px;
-    color: #2c3e50;
-    background: #c6bfab;
-
-    transform: perspective(600px) rotateY(180deg);
-
-    button {
-      color: #2c3e50;
-      background-color: transparent;
-      border: transparent;
-
-      button:active {
-        outline: none;
-      }
-    }
-
-    span {
-      height: 10rem;
-      padding: 1rem;
-      text-align: center;
-      font-size: 0.6rem;
-    }
-
-    &__content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      font-size: 0.7rem;
-    }
-  }
-
+  // Generic layout
   &-front,
   &-back {
-    max-width: 100%;
-    max-height: 100%;
     overflow: hidden;
     backface-visibility: hidden;
-    position: absolute;
     transition: transform 0.6s linear;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba(#000, 0.15);
   }
 
-  &__actions {
-    button,
-    a {
-      cursor: pointer;
+  // Front layout
+  &-front {
+    height: 27.2rem;
+    width: 22rem;
 
-      font-size: 0.6rem;
+    img {
+      height: 100%;
+      width: 100%;
+    }
+  }
 
-      img {
-        width: 2.3rem;
-        height: 2.3rem;
-        transition: all 0.2s;
-        padding: 0.2rem 0.2rem;
+  // Back layout
+  &-back {
+    position: absolute;
+    top: 0;
+    left: 1rem;
 
-        &:hover {
-          padding: 0 0;
+    padding: 2rem;
+    width: 22rem;
+    height: 100%;
+    font-size: 1.2rem;
+
+    color: #2c3e50;
+    background: #c6bfab;
+
+    transform: perspective(600px) rotateY(180deg);
+
+    &__content {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      height: 100%;
+      text-align: center;
+
+      span {
+        font-size: 1.1rem;
+      }
+    }
+
+    &__actions {
+      display: flex;
+      justify-content: center;
+      gap: 0.5rem;
+      margin-top: auto;
+
+      button {
+        background-color: transparent;
+        border: none;
+      }
+
+      button,
+      a {
+        cursor: pointer;
+
+        img {
+          width: 2.6rem;
+          height: 2.6rem;
+          transition: all 0.2s;
+          padding: 0.2rem 0.2rem;
+
+          &:hover {
+            padding: 0 0;
+          }
         }
       }
     }
