update about component styles

--- a/src/pages/about/about.styles.scss
+++ b/src/pages/about/about.styles.scss
@@ -3,7 +3,7 @@
   grid-template-columns: 1fr 1fr;
 
   img {
-    height: 36rem;
+    height: 50rem;
 
     @media screen and (max-width: 1200px) {
       height: 26rem;
@@ -32,12 +32,14 @@
   }
 
   &__description {
-    margin-top: 2rem;
     align-items: center;
-    text-align: center;
+    // text-align: center;
+    font-size: 1.6rem;
+    font-weight: 200;
 
-    font-size: 1.2rem;
-    font-weight: 100;
+    p {
+      margin-bottom: 2rem;
+    }
 
     @media screen and (max-width: 1400px) {
       margin: 2rem;
