--- a/src/components/header/heading/heading.styles.scss
+++ b/src/components/header/heading/heading.styles.scss
@@ -1,19 +1,19 @@
 .heading {
   display: flex;
   flex-direction: column;
-  height: 11.5rem; // typed + sub
+  height: 13.9rem; // typed + sub
   color: #fff;
   text-shadow: 0px 2px 5px rgba(0, 0, 0, 0.4);
-  letter-spacing: 7px;
+  letter-spacing: 0.7rem;
   text-align: center;
   font-weight: 100;
 
   &-primary {
-    font-size: 6.2rem;
+    font-size: 7.4rem;
   }
 
   &-sub {
-    font-size: 2.4rem;
+    font-size: 3rem;
   }
 
   @media screen and (max-width: 800px) {
