--- a/src/components/tool/tool.styles.scss
+++ b/src/components/tool/tool.styles.scss
@@ -1,15 +1,20 @@
-
 .tool {
   flex-direction: column;
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 0.5rem;
-  color: antiquewhite;
-  font-size: 0.9rem;
+  gap: 1rem;
+  color: #ffeec0;
+  font-size: 1.4rem;
+  font-family: inherit;
+  letter-spacing: 0.75px;
+  font-weight: 100;
+
+  span {
+    opacity: 0.7;
+  }
 
   &-svg__svg {
-    width: 100px;
+    width: 6rem;
 
     @media screen and (max-width: 1200px) {
       width: 70px;
