--- a/src/pages/certificate/certificate.styles.scss
+++ b/src/pages/certificate/certificate.styles.scss
@@ -1,8 +1,7 @@
 .certificates {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  justify-content: center;
-  align-items: center;
+  row-gap: 1rem;
 
   @media screen and (max-width: 1200px) {
     grid-template-columns: repeat(2, 1fr);
@@ -13,40 +12,32 @@
   }
 }
 
-.img-modal {
-  height: 40rem;
-}
-
-.button--modal__close {
-  position: absolute;
-  top: -5%;
-  left: 95%;
-  font-size: 3rem;
-  cursor: pointer;
-
-  &:hover::before {
-    content: 'close';
-    font-size: 1rem;
-    position: absolute;
-    top: -1%;
-  }
-}
-
-.hide {
-  display: none;
-}
-
 .certificate {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+
+  position: relative;
+
+  &-overlay,
+  img {
+    width: 39rem;
+  }
+
+  &:hover {
+    > .certificate-zoom {
+      display: block;
+    }
+
+    > .certificate-overlay {
+      display: block;
+    }
+  }
 
   &-overlay {
-    background-color: rgba(0, 0, 0, 0.486);
     position: absolute;
-    top: 0;
-    left: 0;
     height: 100%;
-    width: 100%;
+
+    background-color: rgba(0, 0, 0, 0.486);
   }
 
   &-zoom {
@@ -54,37 +45,11 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 2rem;
+    font-size: 3rem;
     cursor: pointer;
   }
+}
 
-  &-img__box {
-    position: relative;
-    flex: 1;
-
-    &:hover {
-      > .certificate-zoom {
-        display: block;
-      }
-
-      > .certificate-overlay {
-        display: block;
-      }
-    }
-  }
-
-  img {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-  }
-
-  span {
-    color: antiquewhite;
-  }
-
-  p {
-    cursor: pointer;
-    color: #74611a;
-  }
+.hide {
+  display: none;
 }
