add mixins media query manager add media query

--- a/src/components/card/card-item.styles.scss
+++ b/src/components/card/card-item.styles.scss
@@ -1,3 +1,5 @@
+@import '../../sass/mixins';
+
 .portfolio-card {
   display: flex;
   justify-content: center;
@@ -25,8 +27,22 @@
   // Front layout
   &-front {
     height: 27.2rem;
-    width: 22rem;
+    width: 24rem;
 
+    @include respond(tab-land) {
+      height: 25rem;
+      width: 22rem;
+    }
+
+    @include respond(tab-port) {
+      height: 23rem;
+      width: 20rem;
+    }
+
+    @media screen and (max-width: 700px) {
+      height: 20rem;
+      width: 17rem;
+    }
     img {
       height: 100%;
       width: 100%;
@@ -37,10 +53,9 @@
   &-back {
     position: absolute;
     top: 0;
-    left: 1rem;
+    left: 0;
 
     padding: 2rem;
-    width: 22rem;
     height: 100%;
     font-size: 1.2rem;
 
