--- a/src/pages/portfolio/portfolio.styles.scss
+++ b/src/pages/portfolio/portfolio.styles.scss
@@ -1,5 +1,9 @@
+@import '../../sass/mixins';
+
 .portfolio {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  row-gap: 3rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
 }
