--- a/src/components/header/heading/heading.styles.scss
+++ b/src/components/header/heading/heading.styles.scss
@@ -1,3 +1,5 @@
+@import '../../../sass/mixins';
+
 .heading {
   display: flex;
   flex-direction: column;
@@ -8,6 +10,22 @@
   text-align: center;
   font-weight: 100;
 
+  @include respond(tab-land) {
+    height: 11.5rem; // typed + sub
+  }
+
+  @include respond(tab-port) {
+    height: 9.6rem; // typed + sub
+  }
+
+  @media screen and (max-width: 700px) {
+    height: 8.2rem; // typed + sub
+  }
+
+  @include respond(phone) {
+    height: 5.9rem; // typed + sub
+  }
+
   &-primary {
     font-size: 7.4rem;
   }
@@ -16,30 +34,43 @@
     font-size: 3rem;
   }
 
-  @media screen and (max-width: 800px) {
-    margin-top: 1rem;
-    height: 5rem;
-
+  @include respond(tab-land) {
     &-primary {
-      font-size: 2.6rem;
+      font-size: 6.2rem;
     }
 
     &-sub {
-      font-size: 0.8rem;
+      font-size: 2.4rem;
     }
   }
 
-  @media screen and (max-width: 600px) {
-    margin-top: 1rem;
-
-    height: 5rem;
-
+  @include respond(tab-port) {
     &-primary {
-      font-size: 1.4rem;
+      font-size: 5.2rem;
     }
 
     &-sub {
-      font-size: 0.6rem;
+      font-size: 2rem;
+    }
+  }
+
+  @media screen and (max-width: 700px) {
+    &-primary {
+      font-size: 4.4rem;
+    }
+
+    &-sub {
+      font-size: 1.8rem;
+    }
+  }
+
+  @include respond(phone) {
+    &-primary {
+      font-size: 3rem;
+    }
+
+    &-sub {
+      font-size: 1.4rem;
     }
   }
 }
