--- a/src/components/navigation/navigation.styles.scss
+++ b/src/components/navigation/navigation.styles.scss
@@ -1,7 +1,17 @@
+@import '../../sass/mixins';
+
 .navigations {
   display: flex;
   justify-content: center;
   font-size: 1.8rem;
+
+  @include respond(tab-port) {
+    font-size: 1.6rem;
+  }
+
+  @include respond(phone) {
+    font-size: 1.2rem;
+  }
 
   a:visited,
   a:hover,
@@ -15,26 +25,5 @@
     padding: 10px 15px;
     cursor: pointer;
     text-decoration: none;
-  }
-
-  @media screen and (max-width: 800px) {
-    font-size: 0.9rem;
-    .navigation {
-      padding: 0 8px;
-    }
-  }
-
-  @media screen and (max-width: 375px) {
-    font-size: 0.9rem;
-    .navigation {
-      padding: 0 8px;
-    }
-  }
-
-  @media screen and (max-width: 414px) {
-    font-size: 0.9rem;
-    .navigation {
-      padding: 0 8px;
-    }
   }
 }
