--- a/src/pages/about/about.styles.scss
+++ b/src/pages/about/about.styles.scss
@@ -1,70 +1,68 @@
+@import '../../sass/mixins';
+
 .about-me {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1.5fr 2fr;
+  gap: 1rem;
 
-  img {
-    height: 50rem;
-
-    @media screen and (max-width: 1200px) {
-      height: 26rem;
-    }
-  }
-
-  @media screen and (max-width: 900px) {
-    grid-template-columns: 1fr 1fr;
-    margin: 5rem;
-    img {
-      height: 24rem;
-    }
-  }
-
-  @media screen and (max-width: 700px) {
+  @include respond(phone) {
     grid-template-columns: 1fr;
-    margin-top: 2rem;
-    img {
-      height: 24rem;
-    }
-  }
-
-  &__dev {
-    background-color: #ffffff;
-    color: black;
-  }
-
-  &__description {
-    align-items: center;
-    // text-align: center;
-    font-size: 1.6rem;
-    font-weight: 200;
-
-    p {
-      margin-bottom: 2rem;
-    }
-
-    @media screen and (max-width: 1400px) {
-      margin: 2rem;
-    }
-
-    @media screen and (max-width: 1200px) {
-      font-size: 1rem;
-    }
-
-    @media screen and (max-width: 900px) {
-      font-size: 0.9rem;
-    }
+    row-gap: 2rem;
   }
 
   &__img {
-    justify-content: center;
     display: flex;
+    justify-content: flex-end;
 
-    img {
-      max-width: 100%;
-      max-height: 100%;
+    @include respond(phone) {
+      justify-content: center;
     }
 
-    @media screen and (max-width: 900px) {
-      text-align: justify;
+    img {
+      height: 50rem;
+      @include respond(tab-land) {
+        height: 40rem;
+      }
+
+      @include respond(tab-port) {
+        height: 35rem;
+      }
+
+      @include respond(phone) {
+        height: 25rem;
+      }
+    }
+  }
+
+  &__description {
+    max-width: 60rem;
+    font-size: 1.6rem;
+    font-weight: 200;
+    padding: 3rem 3rem;
+
+    @include respond(tab-port) {
+      padding-top: 1rem;
+      padding-left: 1rem;
+
+      font-size: 1.2rem;
+    }
+
+    @include respond(phone) {
+      text-align: center;
+      padding: 0 3rem;
+    }
+
+    .about-me__dev {
+      background-color: #ffffff;
+      color: black;
+    }
+
+    p {
+      margin-bottom: 2rem;
+
+      @include respond(tab-port) {
+        margin-bottom: 1rem;
+      }
     }
   }
 }
