--- a/src/components/card/card-item.styles.scss
+++ b/src/components/card/card-item.styles.scss
@@ -40,9 +40,10 @@
     }
 
     @media screen and (max-width: 700px) {
-      height: 20rem;
-      width: 17rem;
+      height: 18rem;
+      width: 15rem;
     }
+
     img {
       height: 100%;
       width: 100%;
@@ -59,6 +60,11 @@
     height: 100%;
     font-size: 1.2rem;
 
+    @include respond(phone);
+    @include respond(tab-port) {
+      font-size: 1rem;
+    }
+
     color: #2c3e50;
     background: #c6bfab;
 
@@ -72,7 +78,9 @@
       text-align: center;
 
       span {
-        font-size: 1.1rem;
+        @include respond(phone) {
+          font-size: 0.8rem;
+        }
       }
     }
 
