--- a/src/components/tool/tool.styles.scss
+++ b/src/components/tool/tool.styles.scss
@@ -1,3 +1,5 @@
+@import '../../sass/mixins';
+
 .tool {
   flex-direction: column;
   display: flex;
@@ -9,6 +11,14 @@
   letter-spacing: 0.75px;
   font-weight: 100;
 
+  @include respond(tab-port) {
+    font-size: 1.2rem;
+  }
+
+  @include respond(phone) {
+    font-size: 1rem;
+  }
+
   span {
     opacity: 0.7;
   }
@@ -16,11 +26,11 @@
   &-svg__svg {
     width: 6rem;
 
-    @media screen and (max-width: 1200px) {
-      width: 70px;
+    @include respond(tab-land) {
+      width: 5rem;
     }
-    @media screen and (max-width: 800px) {
-      width: 50px;
+    @include respond(tab-port) {
+      width: 4rem;
     }
   }
 }
