--- a/src/sass/utilities.scss
+++ b/src/sass/utilities.scss
@@ -18,7 +18,7 @@
   }
 
   @include respond(phone) {
-    margin-bottom: 1.6rem !important;
+    margin-bottom: 1.2rem !important;
   }
 }
 
@@ -28,4 +28,12 @@
 
 .margin-top-sm {
   margin-top: 3.2rem !important;
+
+  @include respond(tab-land) {
+    margin-top: 2.8rem !important;
+  }
+
+  @include respond(phone) {
+    margin-top: 1.2rem !important;
+  }
 }
